corregi errores tipograficos

--- a/firma_trevor.html
+++ b/firma_trevor.html
@@ -64,7 +64,7 @@
                   <img
                     src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
                     alt="FB"
-                    wwidth="17"
+                    width="17"
                     height="17"
                     style="display: block; border: 0"
                   />
