--- a/firma_trevor.html
+++ b/firma_trevor.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Firma Trevor - Final</title>
+    <title>Firma Trevor - Final Clean</title>
   </head>
   <body>
     <table
@@ -20,7 +20,7 @@
         <td
           valign="top"
           align="center"
-          style="padding-right: 20px; width: 110px"
+          style="padding-right: 20px; width: 130px"
         >
           <a
             href="http://www.momohomes.com"
@@ -30,8 +30,7 @@
             <img
               src="https://imagenbes.netlify.app/logos/MOMO%20HOMES%20BAJA%20transparente.png"
               alt="MoMo Homes"
-              width="80"
-              height="90"
+              width="90"
               style="display: block; border: 0; max-width: 130px"
             />
           </a>
@@ -48,10 +47,10 @@
                   target="_blank"
                 >
                   <img
-                    src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
+                    src="https://cdn-icons-png.flaticon.com/512/87/87390.png"
                     alt="IG"
-                    width="17"
-                    height="17"
+                    width="20"
+                    height="20"
                     style="display: block; border: 0"
                   />
                 </a>
@@ -62,10 +61,10 @@
                   target="_blank"
                 >
                   <img
-                    src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
+                    src="https://cdn-icons-png.flaticon.com/512/20/20673.png"
                     alt="FB"
-                    width="17"
-                    height="17"
+                    width="20"
+                    height="20"
                     style="display: block; border: 0"
                   />
                 </a>
@@ -79,7 +78,7 @@
             width: 2px;
             background-color: #d1d1d1;
             font-size: 1px;
-            line-height: 2px;
+            line-height: 1px;
           "
         >
           &nbsp;
@@ -107,8 +106,8 @@
                   <tr>
                     <td valign="middle" width="25" style="width: 25px">
                       <img
-                        src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png"
-                        alt="WhatsApp"
+                        src="https://cdn-icons-png.flaticon.com/512/159/159832.png"
+                        alt="Phone"
                         width="16"
                         height="16"
                         style="display: block"
@@ -116,7 +115,7 @@
                     </td>
                     <td valign="middle" style="font-size: 13px; color: #000000">
                       <span style="color: #0056b3; font-weight: bold"
-                        >MoMo:</span
+                        >MoMo Cell:</span
                       >
                       <a
                         href="https://wa.me/14359382992"
@@ -136,8 +135,8 @@
                   <tr>
                     <td valign="middle" width="25" style="width: 25px">
                       <img
-                        src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png"
-                        alt="WhatsApp"
+                        src="https://cdn-icons-png.flaticon.com/512/159/159832.png"
+                        alt="Phone"
                         width="16"
                         height="16"
                         style="display: block"
@@ -161,25 +160,37 @@
 
             <tr>
               <td style="padding-bottom: 15px">
-                <table border="0" cellpadding="0" cellspacing="0">
+                <table style="padding-top: 2px">
                   <tr>
-                    <td valign="middle" width="25" style="width: 25px">
+                    <!-- <td
+                      valign="top"
+                      width="25"
+                      style="width: 25px; padding-top: 2px"
+                    >
                       <img
-                        src="https://cdn-icons-png.flaticon.com/512/3870/3870936.png"
+                        src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png"
                         alt="Web"
                         width="16"
                         height="16"
                         style="display: block"
                       />
-                    </td>
-                    <td valign="middle" style="font-size: 13px">
+                    </td> -->
+                    <td valign="top" style="font-size: 13px">
                       <a
-                        href="http://www.MoMoHomes.com"
+                        href="http://www.MoMoHomesBaja.com"
                         target="_blank"
                         style="text-decoration: none; color: #333333"
-                        >www.MoMoHomes.com</a
+                        >www.MoMoHomesBaja.com</a
                       >
                     </td>
+                  </tr>
+                  <tr valign="top" style="font-size: 13px">
+                    <a
+                      href="http://www.MoMoHomes.com"
+                      target="_blank"
+                      style="text-decoration: none; color: #333333"
+                      >www.MoMoHomes.com</a
+                    >
                   </tr>
                 </table>
               </td>
