--- a/firma_trevor.html
+++ b/firma_trevor.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Firma Trevor - Final Clean</title>
+    <title>Firma Trevor - Final Clean WA</title>
   </head>
   <body>
     <table
@@ -31,11 +31,12 @@
               src="https://imagenbes.netlify.app/logos/MOMO%20HOMES%20BAJA%20transparente.png"
               alt="MoMo Homes"
               width="90"
+              height="103"
               style="display: block; border: 0; max-width: 130px"
             />
           </a>
 
-          <div style="height: 0px; font-size: 15px; line-height: 15px">
+          <div style="height: 1px; font-size: 10px; line-height: 10px">
             &nbsp;
           </div>
 
@@ -106,8 +107,8 @@
                   <tr>
                     <td valign="middle" width="25" style="width: 25px">
                       <img
-                        src="https://cdn-icons-png.flaticon.com/512/159/159832.png"
-                        alt="Phone"
+                        src="https://cdn-icons-png.flaticon.com/512/220/220236.png"
+                        alt="WhatsApp"
                         width="16"
                         height="16"
                         style="display: block"
@@ -115,7 +116,7 @@
                     </td>
                     <td valign="middle" style="font-size: 13px; color: #000000">
                       <span style="color: #0056b3; font-weight: bold"
-                        >MoMo Cell:</span
+                        >MoMo WA:</span
                       >
                       <a
                         href="https://wa.me/14359382992"
@@ -135,8 +136,8 @@
                   <tr>
                     <td valign="middle" width="25" style="width: 25px">
                       <img
-                        src="https://cdn-icons-png.flaticon.com/512/159/159832.png"
-                        alt="Phone"
+                        src="https://cdn-icons-png.flaticon.com/512/220/220236.png"
+                        alt="WhatsApp"
                         width="16"
                         height="16"
                         style="display: block"
@@ -144,7 +145,7 @@
                     </td>
                     <td valign="middle" style="font-size: 13px; color: #000000">
                       <span style="color: #0056b3; font-weight: bold"
-                        >Personal:</span
+                        >Personal WA:</span
                       >
                       <a
                         href="https://wa.me/14356407766"
@@ -160,37 +161,39 @@
 
             <tr>
               <td style="padding-bottom: 15px">
-                <table style="padding-top: 2px">
+                <table border="0" cellpadding="0" cellspacing="0">
                   <tr>
-                    <!-- <td
+                    <td
                       valign="top"
-                      width="25"
-                      style="width: 25px; padding-top: 2px"
+                      style="font-size: 13px; padding-bottom: 3px"
                     >
-                      <img
-                        src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png"
-                        alt="Web"
-                        width="16"
-                        height="16"
-                        style="display: block"
-                      />
-                    </td> -->
-                    <td valign="top" style="font-size: 13px">
                       <a
                         href="http://www.MoMoHomesBaja.com"
                         target="_blank"
-                        style="text-decoration: none; color: #333333"
+                        style="
+                          text-decoration: none;
+                          color: #333333;
+                          font-size: 13px;
+                          display: block;
+                        "
                         >www.MoMoHomesBaja.com</a
                       >
                     </td>
                   </tr>
-                  <tr valign="top" style="font-size: 13px">
-                    <a
-                      href="http://www.MoMoHomes.com"
-                      target="_blank"
-                      style="text-decoration: none; color: #333333"
-                      >www.MoMoHomes.com</a
-                    >
+                  <tr>
+                    <td valign="top" style="font-size: 13px">
+                      <a
+                        href="http://www.MoMoHomes.com"
+                        target="_blank"
+                        style="
+                          text-decoration: none;
+                          color: #333333;
+                          font-size: 13px;
+                          display: block;
+                        "
+                        >www.MoMoHomes.com</a
+                      >
+                    </td>
                   </tr>
                 </table>
               </td>
