--- a/firma_trevor.html
+++ b/firma_trevor.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Firma Trevor - Final Clean WA</title>
+    <title>Firma Trevor - Final Simple</title>
   </head>
   <body>
     <table
@@ -36,7 +36,7 @@
             />
           </a>
 
-          <div style="height: 1px; font-size: 10px; line-height: 10px">
+          <div style="height: 1px; font-size: 19px; line-height: 10px">
             &nbsp;
           </div>
 
@@ -116,7 +116,7 @@
                     </td>
                     <td valign="middle" style="font-size: 13px; color: #000000">
                       <span style="color: #0056b3; font-weight: bold"
-                        >MoMo WA:</span
+                        >MoMo:</span
                       >
                       <a
                         href="https://wa.me/14359382992"
@@ -145,7 +145,7 @@
                     </td>
                     <td valign="middle" style="font-size: 13px; color: #000000">
                       <span style="color: #0056b3; font-weight: bold"
-                        >Personal WA:</span
+                        >Personal:</span
                       >
                       <a
                         href="https://wa.me/14356407766"
